stampForce/src/objects/Stamp__c.object
<CustomObject>
    <description>A stamp given to a contact for interacting with a sponsor</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <description>To whom does this stamp belong?</description>
        <inlineHelpText>To whom does this stamp belong?</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>Attendance__c</referenceTo>
        <relationshipLabel>Stamps</relationshipLabel>
        <relationshipName>Stamps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Which event is this stamp related to?</description>
        <inlineHelpText>Which event is this stamp related to?</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Stamps</relationshipLabel>
        <relationshipName>Stamps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <description>Which sponsor owns this stamp?</description>
        <inlineHelpText>Which sponsor owns this stamp?</inlineHelpText>
        <label>Sponsor</label>
        <referenceTo>Sponsorship__c</referenceTo>
        <relationshipLabel>Stamps</relationshipLabel>
        <relationshipName>Stamps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stamp_Confirmed_Time__c</fullName>
        <description>When was this stamp confirmed by the attendee?</description>
        <inlineHelpText>When was this stamp confirmed by the attendee?</inlineHelpText>
        <label>Stamp Confirmed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stampforce_Code__c</fullName>
        <description>What code is this stamp related to?</description>
        <inlineHelpText>What code is this stamp related to?</inlineHelpText>
        <label>Stampforce Code</label>
        <referenceTo>Stampforce_Code__c</referenceTo>
        <relationshipLabel>Stamps</relationshipLabel>
        <relationshipName>Stamps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>What stage is this stamp in?</description>
        <inlineHelpText>What stage is this stamp in?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Generated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stamp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Stamp-{0000000}</displayFormat>
        <label>Stamp Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stamps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>